mobile navigation updates

--- a/src/assets/scss/custom/_navbar.scss
+++ b/src/assets/scss/custom/_navbar.scss
@@ -76,6 +76,19 @@
             }
         }
 
+        .nav-link-dark {
+            padding-top: $navbar-nav-link-padding-y;
+            padding-bottom: $navbar-nav-link-padding-y;
+            border-radius: $navbar-nav-link-border-radius;
+            margin-right: .625rem;
+            margin-left: .625rem;
+
+            i {
+                margin-right: .625rem;
+                color: $gray-800;
+            }
+        }
+
         .nav-link-icon {
             padding-left: .5rem !important;
             padding-right: .5rem !important;
@@ -87,9 +100,9 @@
             }
         }
 
-        // Dropdown menu 
+        // Dropdown menu
         .dropdown-menu {
-            opacity: 0; 
+            opacity: 0;
             pointer-events: none;
             margin: 0;
 
@@ -133,7 +146,7 @@
 
         &.navbar-nav-hover {
             .dropdown-menu {
-                opacity: 0; 
+                opacity: 0;
                 display: block;
                 pointer-events: none;
                 transform: translate(0, 10px) perspective(200px) rotateX(-2deg);
@@ -149,7 +162,7 @@
                 animation: none;
             }
         }
-        
+
         .dropdown-menu-inner {
             position: relative;
             padding: 1rem;
@@ -204,7 +217,7 @@
         }
 
         .navbar-brand {
-            color: $navbar-dark-color; 
+            color: $navbar-dark-color;
 
             @include hover-focus {
                 color: $navbar-dark-color;
@@ -237,8 +250,8 @@
             }
         }
     }
-    
-    .navbar-collapse {     
+
+    .navbar-collapse {
         width: calc(100% - 1.4rem);
         position: absolute;
         top: 0;
@@ -290,7 +303,7 @@
             }
         }
 
-        .collapse-close { 
+        .collapse-close {
             text-align: right;
         }
     }
@@ -321,7 +334,7 @@
     100% {
         opacity: 1;
         transform: scale(1);
-    } 
+    }
 }
 
 @keyframes hide-navbar-collapse {
@@ -334,7 +347,7 @@
     to {
         opacity: 0;
         transform: scale(.95);
-    } 
+    }
 }
 
 @keyframes show-navbar-dropdown {
@@ -347,7 +360,7 @@
     100% {
         transform: translate(0, 0);
         opacity: 1;
-    } 
+    }
 }
 
 @keyframes hide-navbar-dropdown {
@@ -358,5 +371,5 @@
     to {
         opacity: 0;
         transform: translate(0, 10px);
-    } 
+    }
 }
